renkko/guest-bastion/guest-bastion/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: guest-bastion
  labels:
    pod-security.kubernetes.io/enforce: privileged
